kubernetes/manifest/openwebui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui-service
  namespace: sotongpt
spec:
  type: NodePort
  selector:
    app: openwebui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
